--- a/src/App.css
+++ b/src/App.css
@@ -197,6 +197,7 @@ border-radius: 10%;
   color: rgb(70, 69, 69);
   text-decoration: underline;
   width: 100%;
+  margin-right: 100%;
 }
 
 /* Section Styles */
