--- a/src/App.css
+++ b/src/App.css
@@ -196,9 +196,7 @@ border-radius: 10%;
 #projects h3{
   color: rgb(43, 43, 43);
   text-decoration: underline;
-  width: 100%;
-  margin-right: 100%;
-  padding-right: 100%;
+  padding-bottom: 5px;
 }
 
 /* Section Styles */
