--- a/src/App.css
+++ b/src/App.css
@@ -197,6 +197,7 @@ border-radius: 10%;
   color: rgb(43, 43, 43);
   text-decoration: underline;
   padding-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 /* Section Styles */
