--- a/src/App.css
+++ b/src/App.css
@@ -196,8 +196,9 @@ border-radius: 10%;
 #projects h3{
   color: rgb(0, 0, 0);
   text-decoration: underline;
-  padding-bottom: 25px;
-  margin-bottom: 5px;
+  padding-top: 25px;
+  padding-bottom: 10px;
+  margin-bottom: 25px;
 }
 
 /* Section Styles */
