--- a/src/App.css
+++ b/src/App.css
@@ -195,8 +195,9 @@ border-radius: 10%;
 
 #projects h3{
   color: rgb(0, 0, 0);
-  text-decoration: underline;
-  padding-top: 25px;
+  text-decoration: none;
+  border-bottom: 2px grey;
+  padding-top: 10px;
   padding-bottom: 10px;
   margin-bottom: 25px;
 }
