--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@ border-radius: 10%;
 #projects h3{
   color: rgb(0, 0, 0);
   text-decoration: none;
-  border-bottom: 2px grey;
+  border-bottom: 2px rgb(176, 0, 0);
   padding-top: 10px;
   padding-bottom: 10px;
   margin-bottom: 25px;
