--- a/src/App.css
+++ b/src/App.css
@@ -233,7 +233,7 @@ section p {
   line-height: 1.6;
 }
 
-section ul {
+section ol {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
